tests/paczka1/fuzzy1/66424974.err
Error in line 5: yNwAA A825 33,2
Error in line 9: yNwAA A977 91,4
Error in line 13: xUEPx A767 43,53
Error in line 14: 7r7FOlK2Qu A977 83,5
Error in line 19: xUEPx A767 91,6
Error in line 17: Citdw5JYFc A977 113,1
Error in line 30: 7r7FOlK2Qu A767 21,6
Error in line 31: JxjbwgRz A767 98,3
